--- a/Dockerfile.autoconfigure
+++ b/Dockerfile.autoconfigure
@@ -3,7 +3,7 @@ FROM alireza7/x-ui:latest
 # (опционально) Создаём директорию для сертификатов
 RUN mkdir -p /certs
 
-COPY stabe-config/x-ui.db /app/x-ui.db
+COPY config-generator/x-ui.db /app/x-ui.db
 
 EXPOSE 54321
 EXPOSE 2003-2025
