--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -72,11 +72,11 @@ jobs:
       # Запускаем новый контейнер X-UI-NEO с монтированием volume сертификатов
       - name: Run new X-UI container
         run: |
-          mkdir -p neo-apps-data/x-ui
+          docker volume create xui_data_volume || true
           docker run -d \
             --name x-ui-neo \
             --restart unless-stopped \
-            -v $(pwd)/neo-apps-data/x-ui/x-ui.db:/etc/x-ui/x-ui.db \
+            -v xui_data_volume:/app/ \
             -v certs_volume:/certs \
             -p 2002:54321 \
             -p 2003-2025:2003-2025 \
