--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -76,7 +76,7 @@ jobs:
           docker run -d \
             --name x-ui-neo \
             --restart unless-stopped \
-            -v xui_data_volume:/app/ \
+            -v xui_data_volume:/etc/x-ui/ \
             -v certs_volume:/certs \
             -p 2002:54321 \
             -p 2003-2025:2003-2025 \
